@@ -26,6 +26,7 @@ package compiler.c2.irTests;
 
 import compiler.lib.ir_framework.*;
 import java.util.Random;
+import jdk.incubator.vector.Float16;
 import jdk.test.lib.Asserts;
 import jdk.test.lib.Utils;
 
@@ -34,7 +35,9 @@ import jdk.test.lib.Utils;
  * @bug 8289422 8306088 8313720
  * @key randomness
  * @summary Auto-vectorization enhancement to support vector conditional move.
+ * @modules jdk.incubator.vector
  * @library /test/lib /
+ * @compile TestVectorConditionalMove.java
  * @run driver compiler.c2.irTests.TestVectorConditionalMove
  */
 
@@ -44,13 +47,17 @@ public class TestVectorConditionalMove {
 
     public static void main(String[] args) {
         // Cross-product: +-AlignVector and +-UseCompactObjectHeaders
-        TestFramework.runWithFlags("-XX:+UseCMoveUnconditionally", "-XX:+UseVectorCmov",
+        TestFramework.runWithFlags("--add-modules=jdk.incubator.vector",
+                                   "-XX:+UseCMoveUnconditionally", "-XX:+UseVectorCmov",
                                    "-XX:+UnlockExperimentalVMOptions", "-XX:-UseCompactObjectHeaders", "-XX:-AlignVector");
-        TestFramework.runWithFlags("-XX:+UseCMoveUnconditionally", "-XX:+UseVectorCmov",
+        TestFramework.runWithFlags("--add-modules=jdk.incubator.vector",
+                                   "-XX:+UseCMoveUnconditionally", "-XX:+UseVectorCmov",
                                    "-XX:+UnlockExperimentalVMOptions", "-XX:-UseCompactObjectHeaders", "-XX:+AlignVector");
-        TestFramework.runWithFlags("-XX:+UseCMoveUnconditionally", "-XX:+UseVectorCmov",
+        TestFramework.runWithFlags("--add-modules=jdk.incubator.vector",
+                                   "-XX:+UseCMoveUnconditionally", "-XX:+UseVectorCmov",
                                    "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCompactObjectHeaders", "-XX:-AlignVector");
-        TestFramework.runWithFlags("-XX:+UseCMoveUnconditionally", "-XX:+UseVectorCmov",
+        TestFramework.runWithFlags("--add-modules=jdk.incubator.vector",
+                                   "-XX:+UseCMoveUnconditionally", "-XX:+UseVectorCmov",
                                    "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCompactObjectHeaders", "-XX:+AlignVector");
     }
 
@@ -589,6 +596,629 @@ public class TestVectorConditionalMove {
         }
     }
 
+
+
+
+
+
+
+    private int cmoveIGTforI_OK(int a, int b) {
+        return (a > b) ? 1 : 2;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_I, ">0",
+                  IRNode.VECTOR_MASK_CMP_I, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveIGTforI_OK(int[] a, int[] b, int[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? 1 : 2;
+        }
+    }
+
+    private long cmoveIGTforL_OK(int a, int b) {
+        return (a > b) ? (long)1 : (long)2;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_I, ">0",
+                  IRNode.VECTOR_MASK_CMP_I, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveIGTforL_OK(int[] a, int[] b, long[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? (long)1 : (long)2;
+        }
+    }
+
+    private byte cmoveIGTforB_OK(int a, int b) {
+        return (a > b) ? (byte)1 : (byte)2;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_I, ">0",
+                  IRNode.VECTOR_MASK_CMP_I, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveIGTforB_OK(int[] a, int[] b, byte[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? (byte)1 : (byte)2;
+        }
+    }
+
+    private boolean cmoveIGTforBool_OK(int a, int b) {
+        return (a > b) ? true : false;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_I, ">0",
+                  IRNode.VECTOR_MASK_CMP_I, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveIGTforBool_OK(int[] a, int[] b, boolean[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? true : false;
+        }
+    }
+
+    private char cmoveIGTforChar_OK(int a, int b) {
+        return (a > b) ? '1' : '2';
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_I, ">0",
+                  IRNode.VECTOR_MASK_CMP_I, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveIGTforChar_OK(int[] a, int[] b, char[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? '1' : '2';
+        }
+    }
+
+    private short cmoveIGTforShort_OK(int a, int b) {
+        return (a > b) ? (short)1 : (short)2;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_I, ">0",
+                  IRNode.VECTOR_MASK_CMP_I, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveIGTforShort_OK(int[] a, int[] b, short[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? (short)1 : (short)2;
+        }
+    }
+
+    private Float16 cmoveIGTforHF_OK(int a, int b) {
+        return (a > b) ? Float16.valueOf(1) : Float16.valueOf(2);
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR})
+    private static void testCMoveIGTforHF_OK(int[] a, int[] b, Float16[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? Float16.valueOf(1) : Float16.valueOf(2);
+        }
+    }
+
+
+
+
+
+    private long cmoveLGTforL_OK(long a, long b) {
+        return (a > b) ? 1L : 2L;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_L, ">0",
+                  IRNode.VECTOR_MASK_CMP_L, ">0",
+                  IRNode.VECTOR_BLEND_L, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveLGTforL_OK(long[] a, long[] b, long[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? 1 : 2;
+        }
+    }
+
+    private int cmoveLGTforI_OK(long a, long b) {
+        return (a > b) ? 1 : 2;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_L, ">0",
+                  IRNode.VECTOR_MASK_CMP_L, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveLGTforI_OK(long[] a, long[] b, int[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? 1 : 2;
+        }
+    }
+
+    private byte cmoveLGTforB_OK(long a, long b) {
+        return (a > b) ? (byte)1 : (byte)2;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_L, ">0",
+                  IRNode.VECTOR_MASK_CMP_L, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveLGTforB_OK(long[] a, long[] b, byte[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? (byte)1 : (byte)2;
+        }
+    }
+
+    private boolean cmoveLGTforBool_OK(long a, long b) {
+        return (a > b) ? true : false;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_L, ">0",
+                  IRNode.VECTOR_MASK_CMP_L, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveLGTforBool_OK(long[] a, long[] b, boolean[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? true : false;
+        }
+    }
+
+    private char cmoveLGTforChar_OK(long a, long b) {
+        return (a > b) ? '1' : '2';
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_I, ">0",
+                  IRNode.VECTOR_MASK_CMP_I, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveLGTforChar_OK(long[] a, long[] b, char[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? '1' : '2';
+        }
+    }
+
+    private short cmoveLGTforShort_OK(long a, long b) {
+        return (a > b) ? (short)1 : (short)2;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_I, ">0",
+                  IRNode.VECTOR_MASK_CMP_I, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveLGTforShort_OK(long[] a, long[] b, short[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? (short)1 : (short)2;
+        }
+    }
+
+    private Float16 cmoveLGTforHF_OK(long a, long b) {
+        return (a > b) ? Float16.valueOf(1) : Float16.valueOf(2);
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR})
+    private static void testCMoveLGTforHF_OK(long[] a, long[] b, Float16[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? Float16.valueOf(1) : Float16.valueOf(2);
+        }
+    }
+
+
+
+
+    private byte cmoveDGTforB_OK(double a, double b) {
+        return (a > b) ? (byte)1 : (byte)2;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_D, ">0",
+                  IRNode.VECTOR_MASK_CMP_D, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveDGTforB_OK(double[] a, double[] b, byte[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? (byte)1 : (byte)2;
+        }
+    }
+
+    private boolean cmoveDGTforBool_OK(double a, double b) {
+        return (a > b) ? true : false;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_D, ">0",
+                  IRNode.VECTOR_MASK_CMP_D, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveDGTforBool_OK(double[] a, double[] b, boolean[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? true : false;
+        }
+    }
+
+    private char cmoveDGTforChar_OK(double a, double b) {
+        return (a > b) ? '1' : '2';
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_D, ">0",
+                  IRNode.VECTOR_MASK_CMP_D, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveDGTforChar_OK(double[] a, double[] b, char[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? '1' : '2';
+        }
+    }
+
+    private short cmoveDGTforShort_OK(double a, double b) {
+        return (a > b) ? (short)1 : (short)2;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_D, ">0",
+                  IRNode.VECTOR_MASK_CMP_D, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveDGTforShort_OK(double[] a, double[] b, short[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? (short)1 : (short)2;
+        }
+    }
+
+    private Float16 cmoveDGTforHF_OK(double a, double b) {
+        return (a > b) ? Float16.valueOf(1) : Float16.valueOf(2);
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR})
+    private static void testCMoveDGTforHF_OK(double[] a, double[] b, Float16[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? Float16.valueOf(1) : Float16.valueOf(2);
+        }
+    }
+
+
+
+
+    private byte cmoveFGTforB_OK(float a, float b) {
+        return (a > b) ? (byte)1 : (byte)2;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_F, ">0",
+                  IRNode.VECTOR_MASK_CMP_F, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveFGTforB_OK(float[] a, float[] b, byte[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? (byte)1 : (byte)2;
+        }
+    }
+
+    private boolean cmoveFGTforBool_OK(float a, float b) {
+        return (a > b) ? true : false;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_F, ">0",
+                  IRNode.VECTOR_MASK_CMP_F, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveFGTforBool_OK(float[] a, float[] b, boolean[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? true : false;
+        }
+    }
+
+    private char cmoveFGTforChar_OK(float a, float b) {
+        return (a > b) ? '1' : '2';
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_F, ">0",
+                  IRNode.VECTOR_MASK_CMP_F, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveFGTforChar_OK(float[] a, float[] b, char[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? '1' : '2';
+        }
+    }
+
+    private short cmoveFGTforShort_OK(float a, float b) {
+        return (a > b) ? (short)1 : (short)2;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_F, ">0",
+                  IRNode.VECTOR_MASK_CMP_F, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveFGTforShort_OK(float[] a, float[] b, short[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? (short)1 : (short)2;
+        }
+    }
+
+    private Float16 cmoveFGTforHF_OK(float a, float b) {
+        return (a > b) ? Float16.valueOf(1) : Float16.valueOf(2);
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR})
+    private static void testCMoveFGTforHF_OK(float[] a, float[] b, Float16[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? Float16.valueOf(1) : Float16.valueOf(2);
+        }
+    }
+
+
+
+
+
+    private byte cmoveBGTforB_OK(byte a, byte b) {
+        return (a > b) ? (byte)1 : (byte)2;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_I, ">0",
+                  IRNode.VECTOR_MASK_CMP_I, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveBGTforB_OK(byte[] a, byte[] b, byte[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? (byte)1 : (byte)2;
+        }
+    }
+
+    private boolean cmoveBGTforBool_OK(byte a, byte b) {
+        return (a > b) ? true : false;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_I, ">0",
+                  IRNode.VECTOR_MASK_CMP_I, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveBGTforBool_OK(byte[] a, byte[] b, boolean[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? true : false;
+        }
+    }
+
+    private char cmoveBGTforChar_OK(byte a, byte b) {
+        return (a > b) ? '1' : '2';
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_I, ">0",
+                  IRNode.VECTOR_MASK_CMP_I, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveBGTforChar_OK(byte[] a, byte[] b, char[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? '1' : '2';
+        }
+    }
+
+    private short cmoveBGTforShort_OK(byte a, byte b) {
+        return (a > b) ? (short)1 : (short)2;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_I, ">0",
+                  IRNode.VECTOR_MASK_CMP_I, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveBGTforShort_OK(byte[] a, byte[] b, short[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? (short)1 : (short)2;
+        }
+    }
+
+    private double cmoveBGTforD_OK(byte a, byte b) {
+        return (a > b) ? 1.0 : 2.0;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_I, ">0",
+                  IRNode.VECTOR_MASK_CMP_I, ">0",
+                  IRNode.VECTOR_BLEND_D, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveBGTforD_OK(byte[] a, byte[] b, double[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? 1.0 : 2.0;
+        }
+    }
+
+
+
+
+
+    private byte cmoveCGTforB_OK(char a, char b) {
+        return (a > b) ? (byte)1 : (byte)2;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_I, ">0",
+                  IRNode.VECTOR_MASK_CMP_I, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveCGTforB_OK(char[] a, char[] b, byte[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? (byte)1 : (byte)2;
+        }
+    }
+
+    private boolean cmoveCGTforBool_OK(char a, char b) {
+        return (a > b) ? true : false;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_I, ">0",
+                  IRNode.VECTOR_MASK_CMP_I, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveCGTforBool_OK(char[] a, char[] b, boolean[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? true : false;
+        }
+    }
+
+    private char cmoveCGTforChar_OK(char a, char b) {
+        return (a > b) ? '1' : '2';
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_I, ">0",
+                  IRNode.VECTOR_MASK_CMP_I, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveCGTforChar_OK(char[] a, char[] b, char[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? '1' : '2';
+        }
+    }
+
+    private short cmoveCGTforShort_OK(char a, char b) {
+        return (a > b) ? (short)1 : (short)2;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_I, ">0",
+                  IRNode.VECTOR_MASK_CMP_I, ">0",
+                  IRNode.VECTOR_BLEND_I, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveCGTforShort_OK(char[] a, char[] b, short[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? (short)1 : (short)2;
+        }
+    }
+
+    private double cmoveCGTforD_OK(char a, char b) {
+        return (a > b) ? 1.0 : 2.0;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_I, ">0",
+                  IRNode.VECTOR_MASK_CMP_I, ">0",
+                  IRNode.VECTOR_BLEND_D, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveCGTforD_OK(char[] a, char[] b, double[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = (a[i] > b[i]) ? 1.0 : 2.0;
+        }
+    }
+
+
+
+
+
+
+    private double cmoveULGTforD_OK(long a, long b) {
+        return Long.compareUnsigned(a, b) > 0 ? 1.0 : 2.0;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_I, ">0",
+                  IRNode.VECTOR_MASK_CMP_I, ">0",
+                  IRNode.VECTOR_BLEND_D, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveULGTforD_OK(long[] a, long[] b, double[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = Long.compareUnsigned(a[i], b[i]) > 0 ? 1.0 : 2.0;
+        }
+    }
+
+    private double cmoveLGTforD_OK(long a, long b) {
+        return Long.compare(a, b) > 0 ? 1.0 : 2.0;
+    }
+
+    @Test
+    @IR(failOn = {IRNode.STORE_VECTOR}, applyIfPlatform = {"riscv64", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_I, ">0",
+                  IRNode.VECTOR_MASK_CMP_I, ">0",
+                  IRNode.VECTOR_BLEND_D, ">0",
+                  IRNode.STORE_VECTOR, ">0"},
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
+    private static void testCMoveLGTforD_OK(long[] a, long[] b, double[] c) {
+        for (int i = 0; i < a.length; i++) {
+            c[i] = Long.compare(a[i], b[i]) > 0 ? 1.0 : 2.0;
+        }
+    }
+
+
+
     // Extension: Compare 2 ILFD values, and pick from 2 ILFD values
     // Note:
     //   To guarantee that CMove is introduced, I need to perform the loads before the branch. To ensure they
@@ -603,7 +1233,7 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, ">0",
                   IRNode.VECTOR_BLEND_I, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfPlatform = {"riscv64", "false"}, applyIfCPUFeature = {"rvv", "true"})
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
     private static void testCMoveIGTforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -619,7 +1249,7 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, ">0",
                   IRNode.VECTOR_BLEND_L, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfPlatform = {"riscv64", "false"}, applyIfCPUFeature = {"rvv", "true"})
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
     private static void testCMoveIGTforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -651,7 +1281,7 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfPlatform = {"riscv64", "false"}, applyIfCPUFeature = {"rvv", "true"})
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
     private static void testCMoveIGTforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -667,7 +1297,7 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, ">0",
                   IRNode.VECTOR_BLEND_I, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfPlatform = {"riscv64", "false"}, applyIfCPUFeature = {"rvv", "true"})
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
     private static void testCMoveLGTforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -683,7 +1313,7 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, ">0",
                   IRNode.VECTOR_BLEND_L, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfPlatform = {"riscv64", "false"}, applyIfCPUFeature = {"rvv", "true"})
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
     private static void testCMoveLGTforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -699,7 +1329,7 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfPlatform = {"riscv64", "false"}, applyIfCPUFeature = {"rvv", "true"})
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
     private static void testCMoveLGTforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -732,7 +1362,7 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_I, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfPlatform = {"riscv64", "false"}, applyIfCPUFeature = {"rvv", "true"})
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
     private static void testCMoveFGTforI(float[] a, float[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -748,7 +1378,7 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_L, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfPlatform = {"riscv64", "false"}, applyIfCPUFeature = {"rvv", "true"})
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
     private static void testCMoveFGTforL(float[] a, float[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -779,7 +1409,7 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfPlatform = {"riscv64", "false"}, applyIfCPUFeature = {"rvv", "true"})
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
     private static void testCMoveFGTforD(float[] a, float[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -795,7 +1425,7 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_I, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfPlatform = {"riscv64", "false"}, applyIfCPUFeature = {"rvv", "true"})
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
     private static void testCMoveDGTforI(double[] a, double[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -811,7 +1441,7 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_L, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfPlatform = {"riscv64", "false"}, applyIfCPUFeature = {"rvv", "true"})
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
     private static void testCMoveDGTforL(double[] a, double[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -827,7 +1457,7 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfPlatform = {"riscv64", "false"}, applyIfCPUFeature = {"rvv", "true"})
+        applyIfPlatform = {"riscv64", "true"}, applyIfCPUFeature = {"rvv", "true"})
     private static void testCMoveDGTforF(double[] a, double[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -893,6 +1523,8 @@ public class TestVectorConditionalMove {
             doublec[i] = (i % 2 == 0) ? seed + i : seed - i;
         }
     }
+
+
 
     @Warmup(0)
     @Run(test = {"testCMoveVFGT", "testCMoveVFLT","testCMoveVDLE", "testCMoveVDGE", "testCMoveVFEQ", "testCMoveVDNE",
@@ -1056,7 +1688,23 @@ public class TestVectorConditionalMove {
                  "testCMoveDGTforF",
                  "testCMoveDGTforD",
                  "testCMoveFGTforFCmpCon1",
-                 "testCMoveFGTforFCmpCon2"})
+                 "testCMoveFGTforFCmpCon2"
+
+                 ,
+                 "testCMoveIGTforI_OK", "testCMoveIGTforL_OK", "testCMoveIGTforB_OK", "testCMoveIGTforBool_OK",
+                  "testCMoveIGTforChar_OK", "testCMoveIGTforShort_OK", "testCMoveIGTforHF_OK",
+                  "testCMoveLGTforL_OK", "testCMoveLGTforI_OK", "testCMoveLGTforB_OK", "testCMoveLGTforBool_OK",
+                  "testCMoveLGTforChar_OK", "testCMoveLGTforShort_OK", "testCMoveLGTforHF_OK",
+                  "testCMoveDGTforB_OK", "testCMoveDGTforBool_OK",
+                  "testCMoveDGTforChar_OK", "testCMoveDGTforShort_OK", "testCMoveDGTforHF_OK",
+                  "testCMoveFGTforB_OK", "testCMoveFGTforBool_OK",
+                  "testCMoveFGTforChar_OK", "testCMoveFGTforShort_OK", "testCMoveFGTforHF_OK",
+                  "testCMoveBGTforB_OK", "testCMoveBGTforBool_OK",
+                  "testCMoveBGTforChar_OK", "testCMoveBGTforShort_OK", "testCMoveBGTforD_OK",
+                  "testCMoveCGTforB_OK", "testCMoveCGTforBool_OK",
+                  "testCMoveCGTforChar_OK", "testCMoveCGTforShort_OK", "testCMoveCGTforD_OK",
+                  "testCMoveULGTforD_OK",
+                  "testCMoveLGTforD_OK",})
     private void testCMove_runner_two() {
         int[] aI = new int[SIZE];
         int[] bI = new int[SIZE];
@@ -1079,6 +1727,16 @@ public class TestVectorConditionalMove {
         double[] dD = new double[SIZE];
         double[] rD = new double[SIZE];
 
+        byte[] aB = new byte[SIZE];
+        byte[] bB = new byte[SIZE];
+        byte[] cB = new byte[SIZE];
+        boolean[] cBool = new boolean[SIZE];
+        char[] aChar = new char[SIZE];
+        char[] bChar = new char[SIZE];
+        char[] cChar = new char[SIZE];
+        short[] cShort = new short[SIZE];
+        Float16[] cHF = new Float16[SIZE];
+
         init(aI);
         init(bI);
         init(cI);
@@ -1095,6 +1753,198 @@ public class TestVectorConditionalMove {
         init(bD);
         init(cD);
         init(dD);
+
+
+
+
+
+
+        init(aB);
+        init(bB);
+        init(cB);
+        init(cBool);
+        init(aChar);
+        init(bChar);
+        init(cChar);
+        init(cShort);
+        init(cHF);
+
+        testCMoveIGTforI_OK(aI, bI, cI);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cI[i], cmoveIGTforI_OK(aI[i], bI[i]));
+        }
+        testCMoveIGTforL_OK(aI, bI, cL);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cL[i], cmoveIGTforL_OK(aI[i], bI[i]));
+        }
+        testCMoveIGTforB_OK(aI, bI, cB);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cB[i], cmoveIGTforB_OK(aI[i], bI[i]));
+        }
+        testCMoveIGTforBool_OK(aI, bI, cBool);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cBool[i], cmoveIGTforBool_OK(aI[i], bI[i]));
+        }
+        testCMoveIGTforChar_OK(aI, bI, cChar);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cChar[i], cmoveIGTforChar_OK(aI[i], bI[i]));
+        }
+        testCMoveIGTforShort_OK(aI, bI, cShort);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cShort[i], cmoveIGTforShort_OK(aI[i], bI[i]));
+        }
+        testCMoveIGTforHF_OK(aI, bI, cHF);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cHF[i], cmoveIGTforHF_OK(aI[i], bI[i]));
+        }
+
+
+
+        testCMoveLGTforL_OK(aL, bL, cL);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cL[i], cmoveLGTforL_OK(aL[i], bL[i]));
+        }
+        testCMoveLGTforI_OK(aL, bL, cI);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cI[i], cmoveLGTforI_OK(aL[i], bL[i]));
+        }
+        testCMoveLGTforB_OK(aL, bL, cB);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cB[i], cmoveLGTforB_OK(aL[i], bL[i]));
+        }
+        testCMoveLGTforBool_OK(aL, bL, cBool);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cBool[i], cmoveLGTforBool_OK(aL[i], bL[i]));
+        }
+        testCMoveLGTforChar_OK(aL, bL, cChar);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cChar[i], cmoveLGTforChar_OK(aL[i], bL[i]));
+        }
+        testCMoveLGTforShort_OK(aL, bL, cShort);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cShort[i], cmoveLGTforShort_OK(aL[i], bL[i]));
+        }
+        testCMoveLGTforHF_OK(aL, bL, cHF);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cHF[i], cmoveLGTforHF_OK(aL[i], bL[i]));
+        }
+
+
+
+
+        testCMoveDGTforB_OK(aD, bD, cB);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cB[i], cmoveDGTforB_OK(aD[i], bD[i]));
+        }
+        testCMoveDGTforBool_OK(aD, bD, cBool);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cBool[i], cmoveDGTforBool_OK(aD[i], bD[i]));
+        }
+        testCMoveDGTforChar_OK(aD, bD, cChar);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cChar[i], cmoveDGTforChar_OK(aD[i], bD[i]));
+        }
+        testCMoveDGTforShort_OK(aD, bD, cShort);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cShort[i], cmoveDGTforShort_OK(aD[i], bD[i]));
+        }
+        testCMoveDGTforHF_OK(aD, bD, cHF);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cHF[i], cmoveDGTforHF_OK(aD[i], bD[i]));
+        }
+
+
+
+
+        testCMoveFGTforB_OK(aF, bF, cB);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cB[i], cmoveFGTforB_OK(aF[i], bF[i]));
+        }
+        testCMoveFGTforBool_OK(aF, bF, cBool);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cBool[i], cmoveFGTforBool_OK(aF[i], bF[i]));
+        }
+        testCMoveFGTforChar_OK(aF, bF, cChar);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cChar[i], cmoveFGTforChar_OK(aF[i], bF[i]));
+        }
+        testCMoveFGTforShort_OK(aF, bF, cShort);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cShort[i], cmoveFGTforShort_OK(aF[i], bF[i]));
+        }
+        testCMoveFGTforHF_OK(aF, bF, cHF);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cHF[i], cmoveFGTforHF_OK(aF[i], bF[i]));
+        }
+
+
+
+
+        init(aB);
+        init(bB);
+        testCMoveBGTforB_OK(aB, bB, cB);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cB[i], cmoveBGTforB_OK(aB[i], bB[i]));
+        }
+        testCMoveBGTforBool_OK(aB, bB, cBool);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cBool[i], cmoveBGTforBool_OK(aB[i], bB[i]));
+        }
+        testCMoveBGTforChar_OK(aB, bB, cChar);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cChar[i], cmoveBGTforChar_OK(aB[i], bB[i]));
+        }
+        testCMoveBGTforShort_OK(aB, bB, cShort);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cShort[i], cmoveBGTforShort_OK(aB[i], bB[i]));
+        }
+        testCMoveBGTforD_OK(aB, bB, cD);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cD[i], cmoveBGTforD_OK(aB[i], bB[i]));
+        }
+
+
+        testCMoveLGTforD_OK(aL, bL, cD);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cD[i], cmoveLGTforD_OK(aL[i], bL[i]));
+        }
+
+        testCMoveULGTforD_OK(aL, bL, cD);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cD[i], cmoveULGTforD_OK(aL[i], bL[i]));
+        }
+
+
+
+
+        init(aChar);
+        init(bChar);
+        testCMoveCGTforB_OK(aChar, bChar, cB);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cB[i], cmoveCGTforB_OK(aChar[i], bChar[i]));
+        }
+        testCMoveCGTforBool_OK(aChar, bChar, cBool);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cBool[i], cmoveCGTforBool_OK(aChar[i], bChar[i]));
+        }
+        testCMoveCGTforChar_OK(aChar, bChar, cChar);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cChar[i], cmoveCGTforChar_OK(aChar[i], bChar[i]));
+        }
+        testCMoveCGTforShort_OK(aChar, bChar, cShort);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cShort[i], cmoveCGTforShort_OK(aChar[i], bChar[i]));
+        }
+        testCMoveCGTforD_OK(aChar, bChar, cD);
+        for (int i = 0; i < SIZE; i++) {
+            Asserts.assertEquals(cD[i], cmoveCGTforD_OK(aChar[i], bChar[i]));
+        }
+
+
+
+
+
+
 
         testCMoveIGTforI(aI, bI, cI, dI, rI, rI);
         for (int i = 0; i < SIZE; i++) {
@@ -1197,6 +2047,33 @@ public class TestVectorConditionalMove {
     private static void init(long[] a) {
         for (int i = 0; i < SIZE; i++) {
             a[i] = RANDOM.nextLong();
+        }
+    }
+
+    private static void init(byte[] a) {
+        for (int i = 0; i < SIZE; i++) {
+            a[i] = (byte)RANDOM.nextInt();
+        }
+    }
+    private static void init(short[] a) {
+        for (int i = 0; i < SIZE; i++) {
+            a[i] = (short)RANDOM.nextInt();
+        }
+    }
+    private static void init(char[] a) {
+        for (int i = 0; i < SIZE; i++) {
+            a[i] = (char)RANDOM.nextInt();
+        }
+    }
+    private static void init(Float16[] a) {
+        for (int i = 0; i < SIZE; i++) {
+            a[i] = Float16.valueOf(RANDOM.nextInt());
+        }
+    }
+
+    private static void init(boolean[] a) {
+        for (int i = 0; i < SIZE; i++) {
+            a[i] = RANDOM.nextBoolean();
         }
     }
 
